bat.string1.lessons.bat.string1.StringSplosion.scala.error
stringSplosion:7: error: value CharAt is not a member of String
      s = s + str.CharAt(j).toString
                  ^